<resources>
    <string name="app_name">Liquidación</string>
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnRegresar">Regresar</string>
    <string name="btnLiquidar">Liquidar</string>
    <string name="btnSalir">Salir</string>
    <string name="bienvenidos">Bienvenidos</string>
    <string name="segActividad">Segunda Actividad</string>

    <!-- item formulario -->
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="cargo">Cargo</string>
    <string name="sueldoBase">Sueldo Base</string>
    <string name="diasLab">Días Lab</string>
    <string name="descuento">Descuento</string>
    <string name="salud">Salud</string>
    <string name="pension">Pensión</string>
    <string name="viewDescu">Descuento: No</string>
    <string name="viewSalud">Salud: No</string>
    <string name="viewPension">Pensión: No</string>
</resources>