<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/segActividad"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/etNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/nombres"
        android:inputType="text"
        android:text="" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/apellidos"
        android:inputType="text"
        android:text="" />

    <EditText
        android:id="@+id/etCargo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/cargo"
        android:inputType="text"
        android:text="" />

    <EditText
        android:id="@+id/etSueldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/sueldoBase"
        android:inputType="number" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <EditText
            android:id="@+id/etDiasLab"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:autofillHints="name"
            android:hint="@string/diasLab"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/chkDescuento"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/descuento" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <CheckBox
            android:id="@+id/chkSalud"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/salud" />


        <CheckBox
            android:id="@+id/chkPension"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/pension" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/btnRegresar" />

        <Button
            android:id="@+id/btnLiquidar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLiquidar" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>