<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:text="@string/bienvenidos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_margin="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/epp" />

    <Button
        android:id="@+id/btnSiguiente"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="50dp" />

</androidx.appcompat.widget.LinearLayoutCompat>